--- a/token-trek/package.json
+++ b/token-trek/package.json
@@ -25,6 +25,7 @@
     "@tailwindcss/cli": "^4.1.7",
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.4",
+    "@types/three": "^0.176.0",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
     "@vitejs/plugin-react": "^4.4.1",
