--- a/token-trek/package.json
+++ b/token-trek/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@eslint/js": "^9.26.0",
     "@tailwindcss/cli": "^4.1.7",
+    "@types/node": "^22.15.18",
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.4",
     "@types/three": "^0.176.0",
